<resources>
    <string name="app_name">Music Master</string>

    <string name="contentDescription">image</string>
    <string name="oops">Vaya</string>
    <string name="somethingWentWrong">Parece que algo ha salido mal</string>

    <string name="wannaExit">¿Seguro que quieres salir?</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>

    <string name="bbdd_mix">mix</string>
    <string name="bbdd_rock">rock</string>
    <string name="bbdd_pop">pop</string>
    <string name="bbdd_hiphop">hiphop</string>
    <string name="bbdd_antes2000">antes2000</string>
    <string name="bbdd_despues2000">despues2000</string>
    <string name="bbdd_populares">populares</string>
    <string name="bbdd_rap">rap</string>
    <string name="bbdd_reggaeton">reggaeton</string>

    <string name="songsIn">CANCIONES</string>
    <string name="english">EN INGLÉS</string>
    <string name="spanish">EN ESPAÑOL</string>

    <string name="mix">Hazme un mix</string>
    <string name="rock"><b>ROCK</b></string>
    <string name="pop"><b>POP</b></string>
    <string name="hiphop"><b>HIP HOP</b></string>
    <string name="before2000"><b>ANTES DE LOS 2000</b></string>
    <string name="after2000"><b>DESPUÉS DE LOS 2000</b></string>
    <string name="populares"><b>POPULARES</b></string>
    <string name="rap"><b>RAP</b></string>
    <string name="reggaeton"><b>REGGAETON</b></string>

    <string name="mixArtists">Canciones de miles de artistas recopilados en esta aplicación</string>
    <string name="rockArtists">Grandes artistas mundialmente conocidos como Queen, AC/DC, Deep Purple, Foo Fighters, Nirvana, SOAD, The Rolling Stones, Kiss y muchos más</string>
    <string name="popArtists">Clasicazos de Michael Jackson, Madonna, Shakira, Maroon 5, Beyoncé, Katy Perry, Christina Aguilera…</string>
    <string name="hiphopArtists">Artistas de rap americano como Lil Wayne, Snoop Dog, Eminem, Kendrik Lamar, Mac Miller, 21 Savage, Drake, A$AP Rocky…</string>
    <string name="beforeArtists">Los clásicos más sonados que salieron antes del siglo XXI.</string>
    <string name="afterArtists">Canciones míticas publicadas desde el año 2000 hasta hoy.</string>
    <string name="popularesArtists">Las canciones más famosas de la música española. Leyendas como Sabina, Fito, Melendi, ECDL, La Oreja de Van Gogh, Amaral, Estopa…</string>
    <string name="rapArtists">Temas de rap en español con artistas como Kase.O, Nach, Mala Rodriguez, SFDK, Sharif, Hard GZ, Ayax y Prok, Foyone, Rapsusklei, Duo Kie, Kaze…</string>
    <string name="reggaetonArtists">Desde las canciones de reggaeton más míticas hasta las más actuales. Becky G, Nicky Jam, Don Omar, Ozuna, Arcángel, Bad Bunny, Sech, Daddy Yankee…</string>

    <!-- SELECTOR -->
    <string name="wannaGuess">QUIERO ADIVINAR</string>
    <string name="year">EN QUÉ <b>AÑO</b> SALIÓ LA CANCIÓN</string>
    <string name="title">EL <b>TÍTULO</b> DE LA CANCIÓN</string>
    <string name="mode">Modo de juego</string>
    <string name="mode_one">INDIVIDUAL</string>
    <string name="mode_multiplayer">POR EQUIPOS</string>
    <string name="btn_continue">VAMOS</string>

    <!-- GUESSER -->
    <string name="whatYearIsThisSong">¿DE QUÉ AÑO ES ESTA CANCIÓN?</string>
    <string name="whatIsTheTitleOfTheSong">¿CÓMO SE LLAMA ESTA CANCIÓN?</string>
    <string name="check">COMPROBAR</string>
    <string name="songIsFrom">LA CANCIÓN ES DEL</string>
    <string name="titleIs">EL TÍTULO ES</string>
    <string name="threeDots">…</string>
    <string name="zero">0</string>
    
    <string name="groupOne">EQUIPO 1</string>
    <string name="groupTwo">EQUIPO 2</string>
    <string name="gOne">E1</string>
    <string name="gTwo">E2</string>
    <string name="gOneSolution">EQUIPO 1 \t %1$s PUNTOS</string>
    <string name="gTwoSolution">EQUIPO 2 \t %1$s PUNTOS</string>

    <!--  GOOD PHRASES  -->
    <string-array name="goodPhrases">
        <item>MUY BIEN</item>
        <item>PERFECTÍSIMO</item>
        <item>MARAVILLOSO</item>
        <item>FANTABULOSO</item>
        <item>OLÉ</item>
        <item>PERFECTÍSIMO</item>
        <item>GENIAL GENIAL</item>
        <item>ESTUPENDITO</item>
        <item>EN EL CLAVO</item>
        <item>JUSTO</item>
        <item>LO TIENES</item>
    </string-array>

    <!--  ALMOST PHRASES  -->
    <string-array name="almostPhrases">
        <item>UUYYYYYYY</item>
        <item>CASI, PERO NO</item>
        <item>CASI CASI</item>
        <item>HAS ESTADO CERQUITA</item>
        <item>AL PALO</item>
        <item>NO HA ESTADO MAL</item>
        <item>BUEN INTENTO</item>
        <item>A LA PRÓXIMA</item>
        <item>NO ESTÁ MAL, PERO TAMPOCO BIEN</item>
        <item>ROZANDO</item>
    </string-array>

    <!--  BAD PHRASES  -->
    <string-array name="badPhrases">
        <item>QUE DESASTRE…</item>
        <item>FATAL FATAL FATAL</item>
        <item>TODOS SABEMOS QUE HAS HECHO LO QUE HAS PODIDO</item>
        <item>FRACASO ABSOLUTO</item>
        <item>HORRIBLE</item>
        <item>NI IDEA TIENES</item>
        <item>MADRE MÍA…</item>
        <item>AL MENOS LO HAS INTENTADO</item>
        <item>PPFFFFF…</item>
        <item>SI ESTO FUESE UN EXAMEN ESTARÍA SUSPENSO</item>
        <item>FRACASO ABSOLUTO</item>
        <item>ESTO NO ES LO TUYO EH</item>
        <item>POR FAVOR, CONCÉNTRESE</item>
    </string-array>

</resources>