<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guesser.title.TitleGuesserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <include
            android:id="@+id/toolbar"
            layout="@layout/include_toolbar_dashboard" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/includeScore"
        android:layout_below="@+id/appBar"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="25dp"
                android:background="@color/black"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/play_pause_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_pause"
                    android:contentDescription="@string/contentDescription" />

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.ui.views.YouTubePlayerSeekBar
                    android:id="@+id/youtubeSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/whatIsTheTitleOfTheSong"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:autofillHints="name"
                android:background="@drawable/bg_et_titulo"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:hint="@string/threeDots"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@color/black" />

            <Button
                android:id="@+id/comprobarButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif-condensed"
                android:paddingVertical="12dp"
                android:text="@string/check"
                android:textSize="16sp" />

            <include
                android:id="@+id/solution"
                layout="@layout/include_solution_title"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/includeScore"
        layout="@layout/include_score_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp" />

    <include
        android:id="@+id/loading"
        layout="@layout/include_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"
        android:visibility="gone" />

</RelativeLayout>