<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/include_toolbar_dashboard" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@id/cl_next"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintRight_toRightOf="@id/gl_right"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="28sp"
                tools:text="HIJO DE LA LUNA" />

            <TextView
                android:id="@+id/artistText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                tools:text="Mecano" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:showFullScreenButton="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/whatYearIsThisSong"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/groupOne"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <com.chaos.view.PinView
                    android:id="@+id/pinViewOne"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:cursorVisible="false"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cursorWidth="0dp"
                    app:hideLineWhenFilled="true"
                    app:itemCount="4"
                    app:itemRadius="4dp"
                    app:itemSpacing="0dp"
                    app:itemWidth="48dp"
                    app:lineColor="@color/black"
                    app:lineWidth="2dp"
                    app:viewType="rectangle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/groupTwo"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <com.chaos.view.PinView
                    android:id="@+id/pinViewTwo"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:cursorVisible="false"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cursorWidth="0dp"
                    app:hideLineWhenFilled="true"
                    app:itemCount="4"
                    app:itemRadius="4dp"
                    app:itemSpacing="0dp"
                    app:itemWidth="48dp"
                    app:lineColor="@color/black"
                    app:lineWidth="2dp"
                    app:viewType="rectangle" />

            </LinearLayout>

            <Button
                android:id="@+id/comprobarButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif-condensed"
                android:paddingVertical="12dp"
                android:text="@string/check"
                android:textSize="16sp" />

            <include
                android:id="@+id/solution"
                layout="@layout/include_multi_solution_year"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintRight_toRightOf="@id/gl_right">

        <include
            android:id="@+id/includeScore"
            layout="@layout/include_multi_score_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnNext"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnNext"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/include_loading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

</androidx.constraintlayout.widget.ConstraintLayout>